# chatbot-agent

./: README.md  demo_client.py  implmentation_plan.txt  pyproject.toml  run.sh
config/: config.yaml
config/prompts/: system_prompt.txt
frontend/: app.js  index.html  styles.css
skills/calculator/: SKILL.md
skills/calculator/scripts/: calc.py
src/agent/: __init__.py  main.py
src/agent/config/: settings.py
src/agent/core/: __init__.py  agent.py  memory.py
src/agent/llm/: __init__.py  anthropic.py  base.py  factory.py  tracer.py
src/agent/resilience/: __init__.py  circuit_breaker.py  errors.py  retry.py
src/agent/skills/: __init__.py  executor.py  index.py  loader.py
src/agent/tools/: __init__.py  executor.py  registry.py  schema.py
src/agent/tools/builtin/: __init__.py  core_tools.py
src/agent/transport/: __init__.py  connection.py  messages.py  server.py
src/autonomous_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: __init__.py  conftest.py  test_skills.py  test_tools.py
